--- a/readme.rdoc
+++ b/readme.rdoc
@@ -4,4 +4,4 @@
 
 First run 'npm install' and 'bower install'.
 Run node app.js to launch the chat.
-Magic happen on 'localhost:3000'
+Magic happens on 'localhost:3000'
