--- a/readme.rdoc
+++ b/readme.rdoc
@@ -3,5 +3,5 @@
 == Install
 
 First run 'npm install' and 'bower install'.
-Run node app.js to launch the chat.
+Run 'node app.js' to launch the chat.
 Magic happens on 'localhost:3000'
